@@ -24,6 +24,7 @@ New: Definition SOS, Theorem SSIS, sum of subspaces
 New: Exercise S.M40, union of subspaces is not a subspace
 New: Theorem SID, dimensions of intersection and sum of subspaces
 New: Exercise PD.T60, alternate solution using Theorem SID
+New: Theorem ESM, formalizing an eigenvalue discussion
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
 Edit: Exercise IVLT.T15, streamline solution
